@@ -6,6 +6,9 @@ documents those changes that are of interest to users and admins.
  -- BLUEGENE - make sure we only set the jobinfo_select start_loc on a job
     when we are on a small block, not a regular one.
  -- BGQ - fix issue where not copying the correct amount of memory.
+ -- BLUEGENE - fix clean start if jobs were running when the slurmctld was
+    shutdown and then the system size changed.  This would probably only happen
+    if you were emulating a system.
 
 * Changes in SLURM 2.3.0.rc2
 ============================
